--- a/Home_sweet_home.html
+++ b/Home_sweet_home.html
@@ -13,7 +13,7 @@ href="css/stylesheet2.css"/>
                 <li><a href="Info_about_me.html">Info over mij</a></li>
                 </nav>
                 </ul>
-        <h1>Hi welcome to my Website</h1>      
+        <h1>Hi welcome bij mijn website</h1>      
             <p><img src="images/Charel-Louis_his_profile.jpg"alt="Foto from hasedsfdfsd"/></p></li>
          
          <p>Deze website gaat over mij en info over mij</p>
