--- a/Home_sweet_home.html
+++ b/Home_sweet_home.html
@@ -15,6 +15,7 @@ href="css/stylesheet2.css"/>
                 </ul>
         <h1>Hi welcome bij mijn website</h1>      
             <p><img src="images/Charel-Louis_his_profile.jpg"alt="Foto from hasedsfdfsd"/></p></li>
+                <p> test</p>
          
          <p>Deze website gaat over mij en info over mij</p>
          <p>als je op <a href="Info_about_me.html">'INFO'</a> klikt krijg je info over mij</p>
