--- a/Info_about_me.html
+++ b/Info_about_me.html
@@ -16,7 +16,7 @@ href="css/stylesheet2.css"/>
             <h1> Social links </h1>
             <ul>
             <li><a href="https://www.youtube.com/@maskstorm2881">Mijn youtube kanaal</a>
-            <li> test ;) </li>
+            <li> test ;) waarom werkt did not  </li>
             </ul>
            <p> Ik ben Charel-Louis, ik werk graag met pc en html code</p>
         </body>
