--- a/Info_about_me.html
+++ b/Info_about_me.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Info about me  </title>
+<title>Info about me test </title>
 <link type= "text/css" rel="stylesheet"
 href="css/stylesheet2.css"/>
 <meta charset="utf-8"/> 
