--- a/Info_about_me.html
+++ b/Info_about_me.html
@@ -11,6 +11,7 @@ href="css/stylesheet2.css"/>
                 <ul>
                 <li><a href="Home_sweet_home.html">Home pagina</a></li>
                 <li><a href="Info_about_me.html">Herlaad pagina</a></li>
+                <li><a href="test.html">Herlaad pagina</a></li>
                 </nav>
                 </ul>
             <h1> Social links </h1>
@@ -26,4 +27,5 @@ href="css/stylesheet2.css"/>
 
             
         </body>
+
 </html>
